background space jump theme bug update

--- a/src/styles/hyperdrive.css
+++ b/src/styles/hyperdrive.css
@@ -1,5 +1,5 @@
 .wall{
-    background: url("./starsimage3.jpg");
+    background: url("../../public/starsimage3.jpg");
     background-size: cover;
   }
   
